--- a/dashboards/templates/dashboards/index.html
+++ b/dashboards/templates/dashboards/index.html
@@ -395,7 +395,7 @@
         </div>
         
         <div style="text-align:center; color:#cbd5e1; font-size:12px; margin-top:20px;">
-            Unifique Invest • Tecnologia & Dados &copy; {% now "Y" %}
+            Farmacias São João • Tecnologia & Dados &copy; {% now "Y" %}
         </div>
 
     </div>
